<resources>
    <string name="app_name">Unit Converter</string>
    <string name="area_activity">Area Conversion</string>
    <string name="capacity_activity">Capacity Conversion</string>
    <string name="length_activity">Length Conversion</string>
    <string name="mass_activity">Mass Conversion</string>
    <string name="temperature_activity">Temperature Conversion</string>
    <string name="volume_activity">Volume Conversion</string>
    <string name="result"><u>Result</u></string>
    <string name="area">Area</string>
    <string name="length">Length</string>
    <string name="mass">Mass</string>
    <string name="temperature">Temperature</string>
    <string name="volume">Volume</string>
</resources>
