<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.indiedeveloper.unitconverter.MainActivity">

    <Button
        android:id="@+id/area_button"
        android:text="@string/area"
        style="@style/Button"/>

    <Button
        android:id="@+id/length_button"
        style="@style/Button"
        android:text="@string/length"/>

    <Button
        android:id="@+id/mass_button"
        style="@style/Button"
        android:text="@string/mass"/>

    <Button
        android:id="@+id/temperature_button"
        style="@style/Button"
        android:text="@string/temperature"/>

    <Button
        android:id="@+id/volume_button"
        style="@style/Button"
        android:text="@string/volume"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>

</LinearLayout>
